# DATN

./: .gitignore  AGENTS.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_OPTIMIZATION_PLAN.md  CURRENT_STATE.md  Dockerfile  FORK_HEALING_REFACTOR_PLAN.md  FRONTEND_IMPLEMENTATION_PLAN.md  OPTIMIZATION_RESEARCH_LOG.md  PER_NODE_LATENCY_FOR_THESIS_DEFENSE.csv  PROJECT_PLAN.md  README.md  docker-compose.yml  entrypoint.sh  refactor.py  refactor2.py  refactor3.py  refactor4.py  refactor5.py  refactor6.py  refactor7.py  refactor8.py  refactor9.py  remaining_architectural_issues.md  test_fallback.go  test_idem.go  test_mls.go  zip-project.ps1
app/: app.go  app_state.go  cli.go  commands.go  crypto_engine.go  go.mod  go.sum  group_invite.go  group_ops.go  identity_backup.go  identity_backup_test.go  log.go  main.go  node.go  process.go  runner.go  session_runtime.go  wails.json
backend/: app_state.go  cli.go  commands.go  crypto_engine.go  go.mod  go.sum  main.go  node.go  process.go  runner.go
crypto-engine/: Cargo.toml  build.rs  external_join_bench.csv
crypto-engine/src/: lib.rs  main.rs  mls.rs
demo-control/: README.md  app.go  app_test.go  control_client.go  docker_network.go  firewall.go  go.mod  go.sum  jobs.go  main.go  types.go  wails.json
docs/: README.md  adapter-layer.md  admin-config.md  architecture-overview.md  coordination-layer.md  crypto-engine.md  deployment.md  evaluation-testing.md  flows.md  frontend.md  security-protocol.md  service-layer.md  single_writer_protocol.md  storage.md  thesis-evaluation-analysis.md
evaluation/: CACHED_VS_STATELESS_COMPARISON.md  README.md  analyze_mls_optimization.py  plot_chaos.py  plot_concurrency.py  plot_coordinator_overhead.py  plot_epoch_convergence.py  plot_evaluation.py  plot_optimization_results.py  plot_rq1.py  (+2 more)
(+464 files in other folders)
