[package]
name = "crypto-engine"
version = "0.1.0"
edition = "2021" # Changed to 2021 as it's common for newer Rust projects.

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
openmls = "0.8.0"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls_codec = "0.4"
sha2 = "0.10"
futures-util = "0.3"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
tonic-prost = "0.14.3"

[build-dependencies]
tonic-prost-build = "0.14.3"
prost-build = "0.14.3"

